--- a/Patient Transport Migration/Views/Home/VerplegingOverzicht.cshtml
+++ b/Patient Transport Migration/Views/Home/VerplegingOverzicht.cshtml
@@ -1,4 +1,4 @@
-﻿@model Patient_Transport_Migration.Models.VM.VerplegingOverzichtVM
+﻿@model Patient_Transport_Migration.Models.VM.VerplegingOverzicht.VerplegingDienstenLijstVM
 
 @{
     ViewBag.Title = "Verpleging Overzicht";
