--- a/Patient Transport Migration/Views/Home/Index.cshtml
+++ b/Patient Transport Migration/Views/Home/Index.cshtml
@@ -8,4 +8,5 @@
     <li>@Html.ActionLink("Patiënt Info", "PatientInfo", "Home")</li>
     <li>@Html.ActionLink("Verpleging Overzicht", "VerplegingOverzicht", "Home")</li>
     <li>@Html.ActionLink("Maak Vervoer Aanvraag", "MaakVervoerAanvraag", "Home")</li>
+    <li>@Html.ActionLink("Dispatch Overzicht", "DispatchOverzicht" , "Home")</li>
 </ul>
