--- a/Patient Transport Migration/Views/Home/DispatchOverzicht/_WachtendeTransportTaken.cshtml
+++ b/Patient Transport Migration/Views/Home/DispatchOverzicht/_WachtendeTransportTaken.cshtml
@@ -1,26 +1,36 @@
 ﻿@model Patient_Transport_Migration.Models.VM.DispatchOverzicht.WachtendeTransportTakenVM
 
 <table class="table table-bordered table-hover table-responsive table-striped">
-    <caption><big><span class="glyphicon glyphicon-refresh glyphicon-clickable"></span>Taken</big></caption>
+    <caption>
+        <big>
+            <span class="glyphicon glyphicon-refresh glyphicon-clickable" onclick="LoadTaken()"> </span>
+            Taken
+        </big>
+    </caption>
     <tr>
+        <th>Taak</th>
         <th>Datum Gemaakt</th>
         <th>Van</th>
         <th>Naar</th>
         <th>Notities</th>
-        <th><span class="glyphicon glyphicon-warning-sign"></span></th>
+        <th><span class="glyphicon glyphicon-warning-sign" /></th>
         <th>Toewijzen aan</th>
         <th>Actie</th>
     </tr>
     @if (Model.TransportTaken != null) {
         foreach (var ttaak in Model.TransportTaken) {
-            <tr class="@(ttaak.IsPrioriteitHoog ? "HogePrioriteit" : "")">
+            <tr id="Taak-@ttaak.Id" class="@(ttaak.IsPrioriteitHoog ? "HogePrioriteit" : "")">
+                <td>@ttaak.Id</td>
                 <td>@ttaak.DatumGemaakt</td>
                 <td>@ttaak.LocatieStart</td>
                 <td>@ttaak.LocatieEind</td>
-                <td><input type="text" value="@(ttaak.TransportNotities)" /></td>
-                <td><input type="checkbox" value="true" @(ttaak.IsPrioriteitHoog ? "checked=\"checked\"" : "") /></td>
-                <td>@Html.DropDownList("Werknemers", new SelectList(@Model.TransportWerknemerItems, "Value", "Text"), "")</td>
-                <td><span class="glyphicon glyphicon-ok-sign glyphicon-clickable" onclick="saveTaak(@ttaak.AanvraagId)"></span></td>
+                <td><input id="Taak-@ttaak.Id-TransportNotities" type="text" value="@(ttaak.TransportNotities)" /></td>
+                <td><input id="Taak-@ttaak.Id-IsPrioriteitHoog" type="checkbox" @(ttaak.IsPrioriteitHoog ? "checked=\"checked\"" : "") /></td>
+                <td>@Html.DropDownList("Taak-"+@ttaak.Id+"-WerknemerId", new SelectList(@Model.TransportWerknemerItems, "Value", "Text"), "")</td>
+                <td>
+                    <span class="glyphicon glyphicon-ok-sign glyphicon-clickable" onclick="SaveTaak(@ttaak.Id)"> </span>
+                    <span class="glyphicon glyphicon-remove-sign glyphicon-clickable" onclick="DeleteTaak(@ttaak.Id)"> </span>
+                </td>
             </tr>
         }
     }
@@ -29,7 +39,7 @@
 <ul class="pagination">
     @for (var page = Model.Pager.StartPage; page <= Model.Pager.EndPage; page++) {
         <li class="@(page == Model.Pager.CurrentPage ? "active" : "")">
-            <a href="#" onclick="loadTakenPage(@page)">@page</a>
+            <a href="#" onclick="/Home/DispatchOverzicht?TakenPage=(@page)">@page</a>
         </li>
     }
 </ul>
